refactor repositories and services to use native queries; add pagination support for student and payer APIs